appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipePersons::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to persons field"

- tapOn:
    id: "RecipePersons::NumericTextInput"
    label: "Focus on persons input"

- eraseText:
    label: "Erase current persons value"

- inputText:
    text: "6"
    label: "Enter 6 persons"

- pressKey: "ENTER"
