appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipePersons::NumericTextInput"
    direction: UP
    speed: 60
    centerElement: true
    label: "Scroll to persons field"

- tapOn:
    id: "RecipePersons::NumericTextInput"
    label: "Focus on persons input"

- eraseText:
    label: "Erase current persons value"

- inputText:
    text: "2"
    label: "Enter 2 persons"

- pressKey: "ENTER"
