appId: "com.recipedia"
---

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKcal::NumericTextInput"
    direction: DOWN
    speed: 30
    timeout: 240000
    centerElement: true
    label: "Scroll to nutrition section"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKcal::NumericTextInput"
    label: "Tap on energy kcal input"

- runFlow:
    file: "../../waitForKeyboard.yaml"
    label: "Wait for numeric keyboard to appear"

- runFlow:
    file: "../../replaceAndDone.yaml"
    env:
      TARGET_ID: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKcal::NumericTextInput"
      VALUE: "${NEW_ENERGY_KCAL}"
    label: "Enter energy kcal value"

- runFlow:
    file: "../../waitForKeyboardDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fat::NumericTextInput"
    label: "Tap on fat input"

- runFlow:
    file: "../../replaceAndDone.yaml"
    env:
      TARGET_ID: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fat::NumericTextInput"
      VALUE: "${NEW_FAT}"
    label: "Enter fat value"

- runFlow:
    file: "../../waitForKeyboardDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Protein::NumericTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to protein field"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Protein::NumericTextInput"
    label: "Tap on protein input"

- runFlow:
    file: "../../replaceAndDone.yaml"
    env:
      TARGET_ID: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Protein::NumericTextInput"
      VALUE: "${NEW_PROTEIN}"
    label: "Enter protein value"

- runFlow:
    file: "../../waitForKeyboardDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"
