appId: "com.recipedia"
---
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionEmptyState::AddButton::RoundButton"
    direction: DOWN
    speed: 85
    timeout: 120000
    label: "Scroll to bottom of the screen for nutrition"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionEmptyState::AddButton::RoundButton"
    label: "Add nutritional information"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKcal::NumericTextInput"
    label: "Focus on Kcal input"

- runFlow:
    file: "../../waitForKeyboardNumeric.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "195"
    label: "Enter 195 kcal"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKcal::Text"
          label: "Tap on energy (kcal) text to dismiss keyboard on iOS"

- runFlow:
    file: "../../waitForKeyboardNumericDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKj::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 20
    label: "Scroll to KJ input"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKj::NumericTextInput"
    label: "Focus on KJ input"

- runFlow:
    file: "../../waitForKeyboardNumeric.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "816"
    label: "Enter 816 kcal"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::EnergyKj::Text"
          label: "Tap on energy (kj) text to dismiss keyboard on iOS"

- runFlow:
    file: "../../waitForKeyboardNumericDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fat::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 20
    label: "Scroll to fat input"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fat::NumericTextInput"
    label: "Focus on fat"

- runFlow:
    file: "../../waitForKeyboardNumeric.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "8.2"
    label: "Enter 8.2 g for fat"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fat::Text"
          label: "Tap on fat text to dismiss keyboard on iOS"

- runFlow:
    file: "../../waitForKeyboardNumericDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::SaturatedFat::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 20
    label: "Scroll to saturated fat input"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::SaturatedFat::NumericTextInput"
    label: "Focus on saturated fat"

- runFlow:
    file: "../../waitForKeyboardNumeric.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "1.8"
    label: "Enter 1.8 for saturated fat"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::SaturatedFat::Text"
          label: "Tap on saturatedfat text to dismiss keyboard on iOS"

- runFlow:
    file: "../../waitForKeyboardNumericDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Carbohydrates::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 20
    label: "Scroll to carbohydrates input"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Carbohydrates::NumericTextInput"
    label: "Focus on carbohydrates"

- runFlow:
    file: "../../waitForKeyboardNumeric.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "22"
    label: "Enter 22 for carbohydrates"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Carbohydrates::Text"
          label: "Tap on carbohydrates text to dismiss keyboard on iOS"

- runFlow:
    file: "../../waitForKeyboardNumericDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Sugars::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 20
    label: "Scroll to sugar input"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Sugars::NumericTextInput"
    label: "Focus on sugar"

- runFlow:
    file: "../../waitForKeyboardNumeric.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "2.5"
    label: "Enter 2.5 for sugar"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Sugars::Text"
          label: "Tap on sugars text to dismiss keyboard on iOS"

- runFlow:
    file: "../../waitForKeyboardNumericDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fiber::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 20
    label: "Scroll to fiber input"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fiber::NumericTextInput"
    label: "Focus on fiber"

- runFlow:
    file: "../../waitForKeyboardNumeric.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "1.2"
    label: "Enter 1.2 for fiber"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Fiber::Text"
          label: "Tap on fiber text to dismiss keyboard on iOS"

- runFlow:
    file: "../../waitForKeyboardNumericDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Protein::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 20
    label: "Scroll to protein input"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Protein::NumericTextInput"
    label: "Focus on protein"

- runFlow:
    file: "../../waitForKeyboardNumeric.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "12.5"
    label: "Enter 12.5 for protein"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Protein::Text"
          label: "Tap on protein text to dismiss keyboard on iOS"

- runFlow:
    file: "../../waitForKeyboardNumericDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Salt::NumericTextInput"
    direction: DOWN
    centerElement: true
    speed: 20
    label: "Scroll to salt input"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Salt::NumericTextInput"
    label: "Focus on salt"

- runFlow:
    file: "../../waitForKeyboardNumeric.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "1.85"
    label: "Enter 1.85 for salt"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard:
          label: "Dismiss keyboard on Android"

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Recipe::RecipeNutrition::NutritionTable::NutritionRow::Salt::Text"
          label: "Tap on salt text to dismiss keyboard on iOS"

- runFlow:
    file: "../../waitForKeyboardNumericDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::EditForm::PortionWeightNumericTextInput"
    direction: DOWN
    speed: 20
    label: "Scroll to portion weight input"

- waitForAnimationToEnd

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::EditForm::PortionWeightNumericTextInput"
    label: "Focus on portion weight"

- runFlow:
    file: "../../waitForKeyboardNumeric.yaml"
    label: "Wait for numeric keyboard to appear"

- inputText:
    text: "160"
    label: "Enter 160 for portion weight"

- waitForAnimationToEnd:
    label: "Wait for keyboard animation"

- tapOn:
    id: "Recipe::RecipeNutrition::NutritionTable::EditForm::PortionWeightText"
    label: "Tap on weight text to dismiss keyboard"

- runFlow:
    file: "../../waitForKeyboardNumericDismiss.yaml"
    label: "Wait for numeric keyboard to dismiss"

- tapOn:
    id: "Recipe::AppBar::Validate"
    label: "Save the recipe"
