appId: "com.recipedia"
---
- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::SimilarityDialog::AddButton"
    label: "Add ingredient to recipe"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
    label: "Try to confirm adding the new ingredient"

- assertVisible:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
    label: "Button is still there meaning the adding didn't worked"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion"
    label: "Expand the type accordion"

- extendedWaitUntil:
    visible:
      id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion::ingredientTypes.*"
    timeout: 5000
    label: "Wait for type accordion to be expanded"

- scrollUntilVisible:
    element:
      id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion::ingredientTypes.baking"
    direction: DOWN
    speed: 20
    timeout: 1200000
    centerElement: true
    label: "Action - Scroll to baking ingredient type"

- waitForAnimationToEnd:
    label: "Wait for scroll animation to end"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion::ingredientTypes.baking"
    label: "Select Baking type"

- runFlow:
    file: "../../waitForCheckSettle.yaml"
    env:
      CHECK_TEXT: "radio button, checked"
    label: "Wait for item to settle after check (platform-specific)"

- scrollUntilVisible:
    element:
      id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion"
    direction: UP
    speed: 20
    timeout: 1200000
    centerElement: true
    label: "Action - Scroll back to top of the type accordion"

- waitForAnimationToEnd:
    label: "Wait for scroll animation to end"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion"
    label: "Close the type accordion"

- extendedWaitUntil:
    notVisible:
      id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::TypeAccordion::ingredientTypes.*"
    timeout: 5000
    label: "Wait for type accordion to be closed"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::SeasonalityCalendar"
    label: "Expand seasonality accordion"

- extendedWaitUntil:
    visible:
      id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::SeasonalityCalendar::.*"
    timeout: 5000
    label: "Wait for seasonality accordion to be expanded"

- scrollUntilVisible:
    element:
      id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::SeasonalityCalendar::5"
    direction: DOWN
    speed: 20
    timeout: 1200000
    centerElement: true
    label: "Action - Scroll to may seasonality"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::SeasonalityCalendar::5"
    label: "Select may for seasonality"

- runFlow:
    file: "../../waitForCheckSettle.yaml"
    env:
      CHECK_TEXT: "May"
    label: "Wait for item to settle after check (platform-specific)"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::SeasonalityCalendar"
    label: "Collapse seasonality accordion"

- extendedWaitUntil:
    notVisible:
      id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::SeasonalityCalendar::.*"
    timeout: 5000
    label: "Wait for seasonality accordion to be closed"

- tapOn:
    id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
    label: "Confirm adding the new ingredient"
